<resources>
    <string name="app_name">RDV-Manager</string>
    <string name="tvNoItems">No items found</string>
    <string name="add">Add</string>
    <string name="tvTitre">Title</string>
    <string name="tvDate">Date</string>
    <string name="tvTime">Hour</string>
    <string name="tvContact">Contact</string>
    <string name="tvAddress">Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="tvPhoneNum">Phone Number</string>
    <string name="tvState">State</string>
    <string name="delete">Delete</string>
    <string name="tvDescription">Description</string>
    <string name="TvNoItems">No Items Found</string>
    <string name="itemShare">Share</string>
    <string name="itemGoogleMaps">Google Maps</string>
    <string name="makeCall">Call</string>
    <string name="tvNotificationDate">Notification Date</string>
    <string name="tvNotificationTime">Notification Time</string>
    <string name="tvSpiner">Categorie</string>
</resources>